src/testing/tests/e2e/test_case_4.txt
2025-07-14T17:02:05.847483Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] ENTRYPOINT DEBUG ACTIVE: src/shtest_compiler/shtest.py loaded
2025-07-14T17:02:05.847483Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Loaded patterns: ['step', 'action_result', 'action_only', 'result_only', 'comment']
2025-07-14T17:02:05.847483Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Pattern for step: ^(?:Étape|Etape|Step)\s*:\s*(.*)$
2025-07-14T17:02:05.847483Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Pattern for action_result: ^Action\s*:\s*(.*?)(?:\s*;\s*(?:R[ée]sultat|Resultat)\s*:\s*(.*)|\s*R[ée]sultat\s*:\s*(.*))$
2025-07-14T17:02:05.847483Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Pattern for action_only: ^Action\s*:\s*(.*)$
2025-07-14T17:02:05.847483Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Pattern for result_only: ^R[ée]sultat\s*:\s*(.*)$
2025-07-14T17:02:05.847483Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Pattern for comment: ^\s*#.*$
2025-07-14T17:02:05.847483Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Added STEP tokenizer with pattern: ^(?:Étape|Etape|Step)\s*:\s*(.*)$
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Added ACTION_RESULT tokenizer with pattern: ^Action\s*:\s*(.*?)(?:\s*;\s*(?:R[ée]sultat|Resultat)\s*:\s*(.*)|\s*R[ée]sultat\s*:\s*(.*))$
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Added ACTION_ONLY tokenizer with pattern: ^Action\s*:\s*(.*)$
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Added RESULT_ONLY tokenizer with pattern: ^R[ée]sultat\s*:\s*(.*)$
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Added COMMENT tokenizer with pattern: ^\s*#.*$
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Added FallbackTokenizer
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Parsing text with 6 lines
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Lexing text with 6 lines
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] RegexTokenizer.tokenize: Yielding token type=TokenType.STEP, value=Création et modification de fichiers, result=('Création et modification de fichiers',), original=Étape: Création et modification de fichiers at line 1
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Yielding token: STEP@1:0 'Création et modification de fichiers' -> '('Création et modification de fichiers',)'
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] RegexTokenizer.tokenize: Yielding EMPTY token at line 1
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Yielding token: EMPTY@1:0 ''
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] RegexTokenizer.tokenize: Yielding TEXT token value=Action: créer le dossier /tmp/data avec les droits 0755 ; Résultat: Le dossier est créé at line 1
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] RegexTokenizer.tokenize: Yielding token type=TokenType.ACTION_RESULT, value=créer le dossier /tmp/data avec les droits 0755, result=('créer le dossier /tmp/data avec les droits 0755', 'Le dossier est créé', None), original=Action: créer le dossier /tmp/data avec les droits 0755 ; Résultat: Le dossier est créé at line 1
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Yielding token: ACTION_RESULT@1:0 'créer le dossier /tmp/data avec les droits 0755' -> '('créer le dossier /tmp/data avec les droits 0755', 'Le dossier est créé', None)'
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] RegexTokenizer.tokenize: Yielding TEXT token value=Action: créer le fichier /tmp/output.txt avec les droits 0644 ; Résultat: Le fichier est présent at line 1
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] RegexTokenizer.tokenize: Yielding token type=TokenType.ACTION_RESULT, value=créer le fichier /tmp/output.txt avec les droits 0644, result=('créer le fichier /tmp/output.txt avec les droits 0644', 'Le fichier est présent', None), original=Action: créer le fichier /tmp/output.txt avec les droits 0644 ; Résultat: Le fichier est présent at line 1
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Yielding token: ACTION_RESULT@1:0 'créer le fichier /tmp/output.txt avec les droits 0644' -> '('créer le fichier /tmp/output.txt avec les droits 0644', 'Le fichier est présent', None)'
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] RegexTokenizer.tokenize: Yielding TEXT token value=Action: mettre à jour la date du fichier /tmp/output.txt 202501021200 ; Résultat: La date est modifiée at line 1
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] RegexTokenizer.tokenize: Yielding token type=TokenType.ACTION_RESULT, value=mettre à jour la date du fichier /tmp/output.txt 202501021200, result=('mettre à jour la date du fichier /tmp/output.txt 202501021200', 'La date est modifiée', None), original=Action: mettre à jour la date du fichier /tmp/output.txt 202501021200 ; Résultat: La date est modifiée at line 1
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Yielding token: ACTION_RESULT@1:0 'mettre à jour la date du fichier /tmp/output.txt 202501021200' -> '('mettre à jour la date du fichier /tmp/output.txt 202501021200', 'La date est modifiée', None)'
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] RegexTokenizer.tokenize: Yielding TEXT token value=Action: afficher le contenu du fichier /tmp/output.txt ; Résultat: Le contenu est correct at line 1
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] RegexTokenizer.tokenize: Yielding token type=TokenType.ACTION_RESULT, value=afficher le contenu du fichier /tmp/output.txt, result=('afficher le contenu du fichier /tmp/output.txt', 'Le contenu est correct', None), original=Action: afficher le contenu du fichier /tmp/output.txt ; Résultat: Le contenu est correct at line 1
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Yielding token: ACTION_RESULT@1:0 'afficher le contenu du fichier /tmp/output.txt' -> '('afficher le contenu du fichier /tmp/output.txt', 'Le contenu est correct', None)'
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] RegexTokenizer.tokenize: Yielding EMPTY token at line 1
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Yielding token: EMPTY@1:0 ''
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Got 7 tokens
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Grammar: _merge_action_result called with 7 tokens
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Grammar: Token 0: kind=STEP, value='Création et modification de fichiers'
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Grammar: Token 1: kind=EMPTY, value=''
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Grammar: Token 2: kind=ACTION_RESULT, value='créer le dossier /tmp/data avec les droits 0755'
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Grammar: Token 3: kind=ACTION_RESULT, value='créer le fichier /tmp/output.txt avec les droits 0644'
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Grammar: Token 4: kind=ACTION_RESULT, value='mettre à jour la date du fichier /tmp/output.txt 202501021200'
2025-07-14T17:02:05.848473Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Grammar: Token 5: kind=ACTION_RESULT, value='afficher le contenu du fichier /tmp/output.txt'
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Grammar: Token 6: kind=EMPTY, value=''
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Grammar: _merge_action_result returning 7 tokens
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] get_action_shell_command called with: 'créer le dossier /tmp/data avec les droits 0755'
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] canonize_action: Loaded 21 action patterns
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] canonize_action: Processing action 'créer le dossier /tmp/data avec les droits 0755' (normalized: 'créer le dossier /tmp/data avec les droits 0755')
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] canonize_action: Checking pattern 'Créer le dossier {path}' with handler 'create_dir'
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] canonize_action: Testing regex pattern '(?i)^Créer\ le\ dossier\ (.+)$'
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] canonize_action: Found match with pattern 'Créer le dossier {path}'
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] get_action_shell_command: canonize_action matched handler 'create_dir' for phrase 'Créer le dossier {path}'
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] get_action_shell_command: context={'action': 'créer le dossier /tmp/data avec les droits 0755', 'handler': 'create_dir', 'category': 'directory_operations', 'variables': {'path': '/tmp/data avec les droits 0755'}, 'requirements': {'required_variables': ['path'], 'optional_variables': ['mode'], 'scope': 'global', 'description': 'Create a new directory', 'category': 'directory_operations', 'validation_rules': {'path': {'type': 'path', 'required': True}, 'mode': {'type': 'mode', 'required': False, 'pattern': '^[0-7]{3,4}$'}}}, 'patterns_matched': [{'type': 'phrase', 'pattern': 'Créer le dossier {path}', 'config': {'type': 'action', 'phrase': 'Créer le dossier {path}', 'aliases': ['créer un dossier {path}', 'faire un dossier {path}', 'nouveau dossier {path}', 'cr[ée]er le dossier (.+)', '^mkdir (.+)$'], 'handler': 'create_dir'}}], 'scope': 'global'}
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] get_action_shell_command: handler=create_dir, variables={'path': '/tmp/data avec les droits 0755'}
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] get_action_shell_command: Trying action handler: shtest_compiler.core.action_handlers.create_dir
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] get_action_shell_command: Calling action handler with params={'context': {'action': 'créer le dossier /tmp/data avec les droits 0755', 'handler': 'create_dir', 'category': 'directory_operations', 'variables': {'path': '/tmp/data avec les droits 0755'}, 'requirements': {'required_variables': ['path'], 'optional_variables': ['mode'], 'scope': 'global', 'description': 'Create a new directory', 'category': 'directory_operations', 'validation_rules': {'path': {'type': 'path', 'required': True}, 'mode': {'type': 'mode', 'required': False, 'pattern': '^[0-7]{3,4}$'}}}, 'patterns_matched': [{'type': 'phrase', 'pattern': 'Créer le dossier {path}', 'config': {'type': 'action', 'phrase': 'Créer le dossier {path}', 'aliases': ['créer un dossier {path}', 'faire un dossier {path}', 'nouveau dossier {path}', 'cr[ée]er le dossier (.+)', '^mkdir (.+)$'], 'handler': 'create_dir'}}], 'scope': 'global'}, 'path': '/tmp/data avec les droits 0755'}
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] get_action_shell_command: Action handler returned=<shtest_compiler.core.action_handlers.create_dir.CreateDirAction object at 0x0000020DD1696DD0>
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] get_action_shell_command: Generated shell command: mkdir -p '/tmp/data avec les droits 0755'
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] compile_validation_expression called with: 'Le dossier est créé'
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] compile_validation_expression: Detected atomic expression, using compile_atomic
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] compile_atomic called with: expected='Le dossier est créé', varname='result', last_file_var=None, extracted_args=None, action_context={'command': 'créer le dossier /tmp/data avec les droits 0755'}
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] compile_atomic: Trying to canonize validation: 'Le dossier est créé'
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] compile_atomic: canonize_validation('Le dossier est créé') result: {'phrase': 'le dossier est créé', 'handler': 'dir_exists', 'scope': 'last_action', 'pattern_entry': {'phrase': 'Le dossier est prêt', 'handler': 'dir_exists', 'scope': 'last_action', 'opposite': {'phrase': 'Le dossier est absent'}, 'aliases': ['le dossier est prêt', 'dossier prêt', 'le dossier est cree', 'dossier cree', 'le dossier est créé', 'dossier créé', 'le dossier est cree', 'dossier cree', 'le dossier est créé', 'dossier créé', 'le dossier est present', 'dossier present', 'le dossier est vide', 'dossier vide', '^le dossier est prêt$', '^dossier prêt$', '^le dossier est cree$', '^dossier cree$', '^le dossier est créé$', '^dossier créé$', '^le dossier est present$', '^dossier present$', '^le dossier est vide$', '^dossier vide$']}, 'params': {}}
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] extract_context_from_action result: {'action': 'Le dossier est créé', 'handler': 'dir_exists', 'category': 'directory_operations', 'variables': {}, 'requirements': {'required_variables': ['dir'], 'optional_variables': [], 'scope': 'global', 'description': 'Check if a directory exists', 'category': 'directory_operations', 'validation_rules': {'dir': {'type': 'dir', 'required': True}}}, 'patterns_matched': [], 'scope': 'global'}
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Validation context errors for 'Le dossier est créé': Handler dir_exists requires 'dir' variable
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [PIPELINE_ERROR] [ERROR] ValidationParseError: Validation context errors for 'Le dossier est créé': Handler dir_exists requires 'dir' variable
Traceback (most recent call last):
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\compiler\shell_generator.py", line 136, in visit
    shellframework_ast = ShtestToShellFrameworkVisitor().visit(node)
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\ast\visitor.py", line 26, in visit
    return visitor_method(node)
           ^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\ast\shtest_to_shellframework_visitor.py", line 250, in visit_shtestfile
    validation_lines = self.compile_validation_expression(
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\ast\shtest_to_shellframework_visitor.py", line 357, in compile_validation_expression
    return compile_atomic(
           ^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\compiler\atomic_compiler.py", line 83, in compile_atomic
    raise ValidationParseError(error_msg)
shtest_compiler.core.errors.ValidationParseError: Validation context errors for 'Le dossier est créé': Handler dir_exists requires 'dir' variable

2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] [ERROR] ValidationParseError: Validation context errors for 'Le dossier est créé': Handler dir_exists requires 'dir' variable
2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Traceback (most recent call last):
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\compiler\shell_generator.py", line 136, in visit
    shellframework_ast = ShtestToShellFrameworkVisitor().visit(node)
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\ast\visitor.py", line 26, in visit
    return visitor_method(node)
           ^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\ast\shtest_to_shellframework_visitor.py", line 250, in visit_shtestfile
    validation_lines = self.compile_validation_expression(
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\ast\shtest_to_shellframework_visitor.py", line 357, in compile_validation_expression
    return compile_atomic(
           ^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\compiler\atomic_compiler.py", line 83, in compile_atomic
    raise ValidationParseError(error_msg)
shtest_compiler.core.errors.ValidationParseError: Validation context errors for 'Le dossier est créé': Handler dir_exists requires 'dir' variable

2025-07-14T17:02:05.849619Z DESKTOP-19SQ3SL shtest_compiler[3108]: [DEBUG] Compiled C:\Users\Sventer\OneDrive\Documents\batch testing\src\testing\tests\e2e\test_case_4.shtest -> C:\Users\Sventer\OneDrive\Documents\batch testing\src\testing\tests\e2e\test_case_4.sh
